<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="m3z.dsgn.schoolassistant.MainActivity"
    android:orientation="vertical"
    android:weightSum="1">


    <TextView
        android:text="@string/mainTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Button
        android:text="@string/btnMenuMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnCtxMenu" />

    <TextView
        android:text="@string/txtUserMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/txtUserMain"
        android:ems="10"
        android:id="@+id/txtUserMain" />

    <TextView
        android:text="@string/txtPassMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/txtPassMain"
        android:ems="10"
        android:id="@+id/txtPassMain" />

    <Button
        android:text="@string/btnConn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:onClick="mainConnClick"/>

    <Button
        android:text="@string/btnRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:onClick="registrar"/>

    <Button
        android:text="@string/btnExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:onClick="mainExitClick"/>
</LinearLayout>
