<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/profNewTutoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView4" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="Name"
        android:ems="10"
        android:id="@+id/proftext" />

    <TextView
        android:text="@string/fechaNewTutoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView5" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="DD/MM/YYYY"
        android:ems="10"
        android:id="@+id/fechaText" />

    <Button
        android:text="@string/btnAñadeTutoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addBtn"
        android:onClick="addClick"/>
</LinearLayout>